--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <title>Lidz Maqolwana</title>
     </head>
-    <body>
+    <body id='top'>
         <header>
             <i class="bi bi-list-nested"></i>
         </header>
@@ -145,7 +145,7 @@
         <footer>
             <div class='back-to-top'>
                 <i class="bi bi-chevron-double-up"></i>
-                <a href='#'>Back to top</a>
+                <a href='#top'>Back to top</a>
             </div>
             <ul class="social-media">
                 <li><a href=''><img src='assets/ant-design_github-filled.png' alt=''></a></li>
