--- a/index.html
+++ b/index.html
@@ -15,20 +15,43 @@
     </head>
     <body id='top'>
         <header>
+            <img src='assets/logo 2.png' class='logo' alt='logo'>
             <i class="bi bi-list-nested"></i>
+            <ul>
+                <li><a href=''>About</a></li>
+                <li><a href=''>Skills </a></li>
+                <li><a href=''>Portfolio </a></li>
+                <li><a href=''>Contact</a></li>
+            </ul>
         </header>
         <section class='billboard'>
-            <p class="billboard-text">
-               my name is Lidz Maqolwana,
-            </p>
-            <div class='developer'>I'm a web developer.</div>
-            <div class='divider'>
-                <img class='separator' src='assets/separatorWhite 2 (1).png' alt='separator'>
+            <div class='billboard-content'>
+                <p class="billboard-text">
+                my name is Lidz Maqolwana,
+                </p>
+                <div class='developer'>I'm a web developer.</div>
+                <div class='divider'>
+                    <img class='separator' src='assets/separatorWhite 2 (1).png' alt='separator'>
+                </div>
+                <div class='contacts'>
+                    <img src='assets/cib_mail-ru.png' alt='mail'>
+                    <img src='assets/ant-design_github-filled.png' alt='github'>
+                    <img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'>
+                </div>
             </div>
-            <div class='contacts'>
-                <img src='assets/cib_mail-ru.png' alt='mail'>
-                <img src='assets/ant-design_github-filled.png' alt='github'>
-                <img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'>
+            <div class='billboard-content-desktop'>
+                <p class="billboard-text">
+                my name is Lidz Maqolwana,
+                </p>
+                <div class='developer'>I'm a web developer.</div>
+                <div class='divider'>
+                    <img class='separator' src='assets/separatorWhite 2 (1).png' alt='separator'>
+                </div>
+                <div class='contacts'>
+                    <img src='assets/cib_mail-ru.png' alt='mail'>
+                    <img src='assets/ant-design_github-filled.png' alt='github'>
+                    <img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'>
+                </div>
             </div>
         </section>
         <section class='cosmetic'>
@@ -52,7 +75,8 @@
                    therefore its impossible to find the solution without being friends with the problem, I guess I shoul stop now.
                    </span><br>                  
                 </p>
-                <div class='button'>
+                <img src='assets/Logo ITB.png' alt='Itberries' class='ITB-logo'>
+                <div class='button-container'>
                     <button class='moreButton'>More</button> 
                 </div> 
             </div>
@@ -98,22 +122,62 @@
                 </p>
             </div>
         </section>
-        <div class='divider-container'>
+        <div class='divider-container second-divider'>
             <img src='assets/separatorBlack 7.png' alt=''>
         </div>
         <section class='skills'>
+            <div class='skills-mobile'>
+                <h1>Skills</h1>
+                <h2 class='Using'>Using Now:</h2>
+                <div class='tech'>
+                    <span class='tech-text'>HTML</span>
+                    <img src='assets/html.svg' alt='html-avatar'>
+                    <span class='tech-text'>CSS</span>
+                    <img src='assets/css.svg' alt='css-avatar'>
+                    <span class='tech-text'>SCSS</span> 
+                    <img src='assets/scss.svg' alt='scss-avatar'>
+                    <span class='tech-text'>Angular</span>               
+                    <img src='assets/angular.png' style='position:relative;right:9%; width:46%'alt='angular-avatar'>
+                </div>
+            </div>
+        </section>
+        <section class='skills-desktop'>
             <h1>Skills</h1>
             <h2 class='Using'>Using Now:</h2>
-            <div class='tech'>
-                <span class='tech-text'>HTML</span>
-                <img src='assets/html.svg' alt='html-avatar'>
-                <span class='tech-text'>CSS</span>
-                <img src='assets/css.svg' alt='css-avatar'>
-                <span class='tech-text'>SCSS</span> 
-                <img src='assets/scss.svg' alt='scss-avatar'>
-                <span class='tech-text'>Angular</span>               
-                <img src='assets/angular.png' style='position:relative;right:4%; width:47%'alt='angular-avatar'>
-            </div>
+                <div class='tech'>
+                    <div>
+                        <img src='assets/html.svg' alt='html'>
+                        <div>Html</div>
+                    </div>
+                    <div>
+                        <img src='assets/css.svg' alt='css'>
+                        <div>Css</div>
+                    </div>
+                    <div>
+                       <img src='assets/scss.svg' alt='scss'>
+                       <div>Scss</div>
+                    </div>
+                    <div>
+                        <img src='assets/js.svg' alt='js'>
+                        <div>Javascrip</div>
+                    </div>
+                    <div>
+                        <img src='assets/bootstrap-solid 1.png' alt='boostrap'>
+                        <div>Bootstrap</div>
+                    </div>
+                    <div>
+                        <img src='assets/git.svg' alt='Git'>
+                        <div>Git</div>
+                    </div>
+                    <div>
+                        <img src='assets/typescript.png' alt='typescript'>
+                        <div>Typescript</div>
+                    </div>
+                    <div>
+                        <img src='assets/angular.png' alt='angular'>
+                        <div>Angular</div>
+                    </div>
+                </div>
         </section>
         <section class='projects'>
             <div class='projects-background'>
@@ -148,8 +212,8 @@
                 <a href='#top'>Back to top</a>
             </div>
             <ul class="social-media">
-                <li><a href=''><img src='assets/ant-design_github-filled.png' alt=''></a></li>
-                <li><a href=''><img src='assets/entypo-social_linkedin-with-circle.png' alt=''></a></li>
+                <li><a href='https://github.com/Lindikhaya-Lidz/'><img src='assets/ant-design_github-filled.png' alt=''></a></li>
+                <li><a href='https://linkedin.com/in'><img src='assets/entypo-social_linkedin-with-circle.png' alt=''></a></li>
                 <li><a href=''><img src='assets/message.svg' alt=''></a></li>
             </ul>
             
