Desktop design improvements

--- a/index.html
+++ b/index.html
@@ -191,19 +191,22 @@
                 </ul>
             </nav>
             <div class='project-links'>
-                <img src='assets/Landing_Page_Design.png' alt='Dating-app-landing-page'>
-                <img src='assets/Sign Up Page Design (Community).png' alt='sigin-frontend-auth'>
+                <img src='assets/Landing_Page_Design.png'  alt='Dating-app-landing-page'>
+                <img src='assets/Sign Up Page Design (Community).png'  alt='sigin-frontend-auth'>
                 <img src='assets/diary.png' alt='diary-web-app'>
+                <img src='assets/Podcasting Website design (Community).png' class='desktop-projects' alt='podcast'>
+                <img src='assets/Cover.png' class='desktop-projects' alt='o'>
+                <img src='assets/3D Woo APP Design.png' class='desktop-projects' alt='3D Woo'>
             </div>
         </section>
         <section class="contacts">
-            <h1>contacts</h1>
+            <h1 id='contacts'>contacts</h1>
             <form>
-                <input type="text" placeholder='Enter your name'><br>
-                <input type="text" placeholder='Enter your Email'><br>
-                <input type="number" placeholder="Enter Your Phone Number"><br>
+                <input id='input' type="text" placeholder='Enter your name'><br>
+                <input id='input' type="text" placeholder='Enter your Email'><br>
+                <input id='input' type="number" placeholder="Enter Your Phone Number"><br>
                 <textarea name='message' rows='10' cols='25' placeholder="Message"></textarea><br>
-                <input type='submit' class='submit-button' value='submit'>
+                <input id='input' type='submit' class='submit-button' value='submit'>
             </form>
         </section>
         <footer>
