fixed margin issues

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset='UTF-8'>
         <meta name='viewport' content="width = deivice-width,initial-scale=1">
         <link rel='stylesheet' href='style.css'>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,6 +26,7 @@
             </ul>
         </header>
         <section class='billboard'>
+            <img src='assets/hi.png' alt='' class='hi-bubble'>
             <div class='billboard-content'>
                 <p class="billboard-text">
                 my name is Lidz Maqolwana,
@@ -43,7 +45,7 @@
                 <p class="billboard-text">
                 my name is Lidz Maqolwana,
                 </p>
-                <div class='developer'>I'm a web developer.</div>
+                <div class='developer'>I'm a Frontend web developer.</div>
                 <div class='divider'>
                     <img class='separator' src='assets/separatorWhite 2 (1).png' alt='separator'>
                 </div>
