--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class='contacts'>
                     <img src='assets/cib_mail-ru.png' alt='mail'>
-                    <img src='assets/ant-design_github-filled.png' alt='github'>
+                    <a href='https://github.com/Lindikhaya-Lidz'><img src='assets/ant-design_github-filled.png' alt='github'></a>
                     <img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'>
                 </div>
             </div>
@@ -51,8 +51,8 @@
                 </div>
                 <div class='contacts'>
                     <img src='assets/cib_mail-ru.png' alt='mail'>
-                    <img src='assets/ant-design_github-filled.png' alt='github'>
-                    <img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'>
+                    <a href='https://github.com/Lindikhaya-Lidz'><img src='assets/ant-design_github-filled.png' alt='github'></a>
+                    <a href='https://linkedin/lindikhaya-maqolwana-48163417b'><img src='assets/entypo-social_linkedin-with-circle.png' alt='linkedin'></a>
                 </div>
                 <img src='assets/marketing-manager-3025704-2526902.png' alt='' class='computer-illu'>
             </div>
@@ -213,7 +213,7 @@
             </div>
             <ul class="social-media">
                 <li><a href='https://github.com/Lindikhaya-Lidz/'><img src='assets/ant-design_github-filled.png' alt=''></a></li>
-                <li><a href='https://linkedin.com/in'><img src='assets/entypo-social_linkedin-with-circle.png' alt=''></a></li>
+                <li><a href='https://www.linkedin.com/in/lindikhaya-maqolwana-48163417b/'><img src='assets/entypo-social_linkedin-with-circle.png' alt=''></a></li>
                 <li><a href=''><img src='assets/message.svg' alt=''></a></li>
             </ul>
             
