--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href='#skills'>Skills </a></li>
                 <li><a href=''>Portfolio </a></li>
                 <li><a href='#contacts-link'>Contact</a></li>
+                <i class="bi bi-x" class='close-menu'></i>
             </ul>
         </header>
         <section class='billboard'>
