--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul id='mobile-menu' class='desktop-menu'>
                 <li><a href='#aboutMe'>About</a></li>
                 <li><a href='#skills'>Skills </a></li>
-                <li><a href=''>Portfolio </a></li>
+                <li><a href='assets/updatedmyCv.pdf' >Cv</a></li>
                 <li><a href='#contacts-link'>Contact</a></li>
                 <i class="bi bi-x" class='close-menu'></i>
             </ul>
